--- a/views/forcast.ejs
+++ b/views/forcast.ejs
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" >
+        <title>Weather</title>
 </head>
 <body>
     <div class="container">
@@ -26,7 +25,7 @@
                                 </div>
                             </div>
                             <div class="col-4">
-                                <button type="button" class="btn btn-normal float-left" onclick="goHome()">
+                                <button type="button" class="btn btn-normal float-right" onclick="goHome()">
                                     ย้อนกลับ
                                 </button>
                             </div>
@@ -39,15 +38,15 @@
                         </ul>
                         <div class="row">
                             <div class="col-4">
-                                <img class="img-thumbnail" src="https://openweathermap.org/img/w/
-                                <%= forcastObj.weather[0].icon%>.png" alt="icon">
+                                <img class="img-thumbnail" src="https://openweathermap.org/img/w/<%= forcastObj.weather[0].icon %>.png" alt="icon"> 
+                                <!-- // error เพราะเว้นบรรทัด -->
                             </div>
                             <div class="col-8 text-left">
                                 <div class="ml-3">สภาพอากาศ
                                     <%= forcastObj.weather[0].description%>
                                 </div>
                                 <div class="ml-3">อุณหภูมิ
-                                    <%= forcastObj.main.temp %>องศาเซลเซียส
+                                    <%= forcastObj.main.temp%>องศาเซลเซียส
                                 </div>
                                 <div class="ml-3">ความชื้น
                                     <%= forcastObj.main.humidity%>เปอร์เซ็นต์
