--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" >
+    <title>Weather</title>
 </head>
 <body>
     <div class="container">
@@ -19,7 +18,7 @@
             <hr/>
         </div>
         <div class="row text-center">
-            <div class="col-md-3 d-sm-none d-md-block"></div>
+            
             <div class="col-sm-6 col-md-3 mx-md-auto">
                 <div type="button" class="btn btn-lg btn-primary p-4 mt-1 mb-1" onclick="city_form()">
                     จากชื่อจังหวัดหรืออำเภอ
@@ -40,7 +39,7 @@
         </div>
         <div class="row" id="city" style="display: none;">
             <div class="col-sm-6 mx-auto">
-                <form action="/api/city.js" id="form_city" class="form text-center">
+                <form action="/api/city" id="form_city" class="form text-center" >
                     <div class="form-group">
                         <label for="city">
                             จังหวัดหรืออำเภอของประเทศไทย
@@ -59,7 +58,7 @@
         </div>
         <div class="row" id="location" style="display: none;">
             <div class="col-6" mx-auto>
-                <form action="/api/coordinate.js" id="form_location" class="text-center">
+                <form action="/api/coordinate" id="form_location" class="text-center">
                     <div class="form-group">
                         <label for="lon">เส้นเเวง (Longitude)</label>
                         <input   name="lon" type="number" step="0.0001" class="form-control"
